Add Documents model and Active Storage AWS

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,15 +9,23 @@
         <%# <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li> %>
+
         <li class="nav-item">
           <%= link_to 'Home', home_page_path, class:"nav-link" %>
         </li>
+
         <li class="nav-item">
           <%= link_to 'Itinerary', activities_path, class:"nav-link" %>
         </li>
+
         <li class="nav-item">
           <%= link_to 'Links', links_path, class:"nav-link" %>
         </li>
+
+        <li class="nav-item">
+          <%= link_to 'Documents', documents_path, class:"nav-link" %>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
