--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,9 +18,9 @@
 
   </div>
 
-  <%# <div class="form-actions">
+  <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
-  <%# </div> %> %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
