--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,10 @@
           <%= link_to 'Photos', posts_path, class:"nav-link" %>
         </li>
 
+        <li class="nav-item">
+          <%= link_to 'Chat', chats_path, class:"nav-link" %>
+        </li>
+
       </ul>
     </div>
   </div>
