Add hero image to home page, adjust header

--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,3 +1,4 @@
-<h1>Whitsundays Sailing 2021</h1>
 
-<%= image_tag "home_yacht.jpeg" %>
+    <%# <h1>Whitsundays Sailing 2021</h1> %>
+
+<%= image_tag "hero_whitsundays.png" %>
