--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,15 @@
 
   <body>
     <%= render 'shared/header' %>
-    <p class="notice"><%= notice %></p>
+
+    <% unless notice.nil? %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+
+    <% unless alert.nil? %>
     <p class="alert"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
-    <%= render 'shared/navbar' %>
   </body>
 </html>
