--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,32 +1,59 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div class="container-fluid d-flex justify-content-around">
+    <a class="navbar-brand" href="/home/page">Whitsundays Sailing 2021</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav nav-fill w-100">
+        <%# <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li> %>
+
+        <li class="nav-item">
+          <%= link_to 'Home', home_page_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Itinerary', activities_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Links', links_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Documents', documents_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Photos', posts_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Chat', chats_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to 'Contacts', contacts_path, class:"nav-link" %>
+        </li>
 
         <li class="nav-item">
           <% if user_signed_in? %>
-            <span>Welcome&nbsp;</span><%= current_user.firstname %><span>!</span>
+            <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class:"nav-link" %>
+        <% else %>
+            <%= link_to 'Log In', new_user_session_path, class:"nav-link" %>
+        <% end %>
+        </li>
+
+        <li class="nav-item navbar-brand">
+          <% if user_signed_in? %>
+            <span>Welcome,&nbsp;</span><%= current_user.title %>&nbsp<%= current_user.firstname %><span>!</span>
         <% else %>
             <p>You are currently visiting as a guest.</p>
         <% end %>
         </li>
 
-        <a class="navbar-brand" href="/home/page">Whitsundays Sailing 2021</a>
-
-
-        <li class="nav-item">
-          <% if user_signed_in? %>
-            <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-        <% else %>
-            <%= link_to 'Log In', new_user_session_path %>
-        <% end %>
-        </li>
-
-        </li>
       </ul>
     </div>
   </div>
