--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home/page">Whitsundays Sailing 2021</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,6 +36,22 @@
 
         <li class="nav-item">
           <%= link_to 'Contacts', contacts_path, class:"nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <% if user_signed_in? %>
+            <span>Welcome&nbsp;</span><%= current_user.firstname %><span>!</span>
+        <% else %>
+            <p>You are currently visiting as a guest.</p>
+        <% end %>
+        </li>
+
+                <li class="nav-item">
+          <% if user_signed_in? %>
+            <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+        <% else %>
+            <%= link_to 'Log In', new_user_session_path %>
+        <% end %>
         </li>
 
       </ul>
