--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Add a new activity to the Itinerary</h1>
+<div class="container">
+    <h1>Add a new activity or suggestion to the Itinerary</h1>
 
-<%= render 'form', activity: @activity %>
+    <%= render 'form', activity: @activity %>
+
+</div>
