--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Activities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@media only screen and (max-width: 600px) {
+    .field label, .field input, .field textarea {
+        min-width: 90%;
+    }
+
+    .date_time {
+        max-width: 50%;
+    }
+
+}
+
+// tablets and ipads  
+@media only screen and (min-width: 600px) {
+    .field label, .field input, .field textarea {
+        min-width: 50%;
+    }
+    .date_time {
+        max-width: 50%;
+    }
+}
+
+// Set formatting for desktop screen sizes  
+@media only screen and (min-width: 1200px) {
+
+}
