--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+// mobile devices 
+@media only screen and (max-width: 600px) {
+    img {
+        width: 100vw;
+    }
+}
+
+// tablets and ipads  
+@media only screen and (min-width: 600px) {
+    img {
+        width: 100vw;
+    }
+}
+
+// Set formatting for desktop screen sizes  
+@media only screen and (min-width: 1200px) {
+    img {
+
+    }
+}
