--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,32 +1,64 @@
-<h1>Itinerary</h1>
+<div class="container">
+    <h1>Itinerary</h1>
 
- <% @activities.each do | activity | %>
+    <table class="table">
+    <thead>
+        <tr>
+        <th>Date</th>
+        <th>Time</th>
+        <th>Activity</th>
+        <th>Description</th>
+        <th colspan="3">Options</th>
+        </tr>
+    </thead>
 
-    <% if activity.date? %>
-        <strong>Date: </strong><%= activity.date.strftime("%A %-d-%b-%Y") %>
-    <% else %>
-        &nbsp;
+    <tbody>
+    <% @activities.each do | activity | %>
+        <tr>
+        <td>
+        <% if activity.date? %>
+            <%= activity.date.strftime("%A %-d-%b-%Y") %>
+        <% else %>
+            &nbsp;
+        <% end %>
+        </td>
+
+        <td>
+        <% if activity.time? %>
+            <%= activity.time.strftime("%l:%M %P") %>
+        <% else %>
+            &nbsp;
+        <% end %>
+        </td>
+
+        <td>
+        <% if activity.title? %>
+            <%= sanitize(activity.title) %>
+        <% else %>
+            &nbsp;
+        <% end %>
+        </td>
+
+        <td>
+        <% if activity.description? %>
+            <%= sanitize(activity.description) %>
+        <% else %>
+            &nbsp;
+        <% end %>
+        </td>
+
+        <td><%= link_to 'View Details', activity %></td>
+        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
+        <td><%= link_to 'Delete', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        </tr>
     <% end %>
+    </tbody>
+    </table>
 
-    <% if activity.time? %>
-        <strong>Time: </strong><%= activity.time.strftime("%l:%M %P") %>
-    <% else %>
-        &nbsp;
-    <% end %>
+    <br>
 
-    <% if activity.title? %>
-        <strong>Title: </strong><%= sanitize(activity.title) %>
-    <% else %>
-        &nbsp;
-    <% end %>
-
-    <% if activity.description? %>
-        <strong>Date: </strong><%= sanitize(activity.description) %>
-    <% else %>
-        &nbsp;
-    <% end %>
-<% end %>
-
-<br>
-
-<%= link_to 'Add a New Activity', new_activity_path %>
+    <button type="button" class="btn btn-outline-primary">  
+        <%= link_to 'Add a New Activity', new_activity_path %>
+    </button>
+</div>
