--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,4 +1,1 @@
-
-    <%# <h1>Whitsundays Sailing 2021</h1> %>
-
-<%= image_tag "hero_whitsundays.png" %>
+<%= image_tag "hero_whitsundays.png", class:"hero_image" %>
