--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new Link</h1>
+<div class="container">
+    <h1>Add a new Link</h1>
 
-<%= render 'form', link: @link %>
+    <%= render 'form', link: @link %>
+</div>
