--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,29 @@
  h1 {
      margin-top: 1em;
  }
+
+ @media only screen and (max-width: 600px) {
+    .field label, .field input, .field textarea {
+        min-width: 90%;
+    }
+
+    .date_time {
+        max-width: 50%;
+    }
+
+}
+
+// tablets and ipads  
+@media only screen and (min-width: 600px) {
+    .field label, .field input, .field textarea {
+        min-width: 50%;
+    }
+    .date_time {
+        max-width: 50%;
+    }
+}
+
+// Set formatting for desktop screen sizes  
+@media only screen and (min-width: 1200px) {
+
+}
