--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Edit Link</h1>
+<div class="container">
+    <h1>Edit Link</h1>
 
-<%= render 'form', link: @link %>
+    <%= render 'form', link: @link %>
 
-<section class="grouped_buttons">
-    <button type="button" class="btn btn-info">
-        <%= link_to 'Show', @link %> 
-    </button >
+    <section class="grouped_buttons">
+        <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'View Link', @link %> 
+        </button >
 
-</section>
+    </section>
+</div>
