--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new Photo Post</h1>
+<div class="container">
+    <h1>Add a new Photo Post</h1>
 
-<%= render 'form', post: @post %>
+    <%= render 'form', post: @post %>
+</div>
