--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,35 +1,33 @@
-<h1>
-<%= sanitize(@post.title) %>
-</h1>
-
-<p>
-<strong>Comments:</strong>
-<%= sanitize(@post.comment) %>
-</p>
+<div class="container">
+    <h1>
+    <%= sanitize(@post.title) %>
+    </h1>
 
 
-<%= image_tag url_for(@post.photo), style:'width:40%' %>
+    <%= image_tag url_for(@post.photo), style:'width:40%' %>
 
-<%# <%= image_tag @post.photo %> %>
+    <br>
 
-<%# <p>
-<button>
-    <%= link_to 'Download file', rails_blob_url(@post.photos, disposition: "attachment") %>
-<%# </button>
-</p> %> %>
+    <p>
+    <strong>Comments:</strong>
+    <%= sanitize(@post.comment) %>
+    </p>
 
-<br>
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Download photo', rails_blob_url(@post.photo, disposition: "attachment") %> 
+    </button>
 
-<% if user_signed_in? %>
-    <% if @post.user_id == current_user.id %>
-        <button type="button" class="btn btn-info">
-        <%= link_to 'Edit', edit_post_path(@post) %>
-        </button>
+    <% if user_signed_in? %>
+        <% if @post.user_id == current_user.id %>
+            <button type="button" class="btn btn-outline-primary">
+                <%= link_to 'Edit', edit_post_path(@post) %>
+            </button>
+        <% end %>
     <% end %>
-<% end %>
 
-<button type="button" class="btn btn-info">
-<%= link_to 'Back', posts_path %>
-</button>
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Back', posts_path %>
+    </button>
 
-<br>
+    <br>
+</div>
