--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new comment to the Chat</h1>
+<div class="container">    
+    <h1>Add a new comment to the Chat</h1>
 
-<%= render 'form', chat: @chat %>
+    <%= render 'form', chat: @chat %>
+</div>
