--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,14 @@
     margin-bottom: .4em;
 }
 
+.chat_buttons button {
+    margin-bottom: .4em;
+}
+
+.chat_buttons {
+    margin-left: 3em;
+}
+
  @media only screen and (max-width: 600px) {
     .field label, .field input, .field textarea {
         min-width: 90%;
