--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,37 +1,39 @@
-<h1>Comment</h1>
+<div class="container">
+    <h1>Comment</h1>
 
-<p>
-    <strong>Comment:</strong>
-    <%= sanitize(@chat.comment) %>
-</p>
+    <p>
+        <strong>Comment:</strong>
+        <%= sanitize(@chat.comment) %>
+    </p>
 
-<p>
-    <strong>Added by:</strong>
-    <%= @chat.user.firstname %>
-</p>
+    <p>
+        <strong>Added by:</strong>
+        <%= @chat.user.firstname %>
+    </p>
 
-<p>
-    <strong>Added on:</strong>
-    <%= @chat.created_at.strftime("%A %-d-%b-%Y") %>
-</p>
+    <p>
+        <strong>Added on:</strong>
+        <%= @chat.created_at.strftime("%A %-d-%b-%Y") %>
+    </p>
 
-<p>
-    <strong>Added at:</strong>
-    <%= @chat.created_at.strftime("%l:%M %P") %>
-</p>
+    <p>
+        <strong>Added at:</strong>
+        <%= @chat.created_at.strftime("%l:%M %P") %>
+    </p>
 
-<br>
+    <br>
 
-<% if user_signed_in? %>
-    <% if @chat.user_id == current_user.id %>
-        <button type="button" class="btn btn-info">
-        <%= link_to 'Edit', edit_chat_path(@chat) %>
-        </button>
+    <% if user_signed_in? %>
+        <% if @chat.user_id == current_user.id %>
+            <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'Edit', edit_chat_path(@chat) %>
+            </button>
+        <% end %>
     <% end %>
-<% end %>
 
-<button type="button" class="btn btn-info">
-<%= link_to 'Back', chats_path %>
-</button>
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Back', chats_path %>
+    </button>
 
-<br>
+    <br>
+</div>
