Refine Contact views

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -13,12 +13,12 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :firstname %>
+      <%= form.label "First Name" %>
       <%= form.text_field :firstname %>
     </div>
 
     <div class="field">
-      <%= form.label :lastname %>
+      <%= form.label "Last Name" %>
       <%= form.text_field :lastname %>
     </div>
 
