--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new Contact</h1>
+<div class="container">
+    <h1>Add a new Contact</h1>
 
-<%= render 'form', contact: @contact %>
+    <%= render 'form', contact: @contact %>
+</div>
