--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@
     margin-bottom: .4em;
 }
 
-.chat_buttons button {
+.chat_buttons button, .contact_buttons button {
     margin-bottom: .4em;
 }
 
