--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Add a new Document</h1>
+<div class="container">
+    <h1>Add a new Document</h1>
 
-<%= render 'form', document: @document %>
+    <%= render 'form', document: @document %>
+</div>
