--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,40 +1,42 @@
-<h1>
-<%= sanitize(@document.title) %>
-</h1>
+<div class="container">
+    <h1>
+    <%= sanitize(@document.title) %>
+    </h1>
 
-<p>
-<strong>Title:</strong>
-<%= @document.title %>
-</p>
+    <p>
+    <strong>Title:</strong>
+    <%= @document.title %>
+    </p>
 
-<p>
-<strong>Description:</strong>
-<%= sanitize(@document.description) %>
-</p>
+    <p>
+    <strong>Description:</strong>
+    <%= sanitize(@document.description) %>
+    </p>
 
-<p>
-<strong>Category:</strong>
-<%= @document.category %>
-</p>
+    <p>
+    <strong>Category:</strong>
+    <%= @document.category %>
+    </p>
 
-<p>
-<button>
-    <%= link_to 'Download file', rails_blob_url(@document.file, disposition: "attachment") %>
-</button>
-</p>
+    <p>
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Download file', rails_blob_url(@document.file, disposition: "attachment") %>
+    </button>
+    </p>
 
-<br>
+    <br>
 
-<% if user_signed_in? %>
-    <% if @document.user_id == current_user.id %>
-        <button type="button" class="btn btn-info">
-        <%= link_to 'Edit', edit_document_path(@document) %>
-        </button>
+    <% if user_signed_in? %>
+        <% if @document.user_id == current_user.id %>
+            <button type="button" class="btn btn-outline-primary">
+            <%= link_to 'Edit', edit_document_path(@document) %>
+            </button>
+        <% end %>
     <% end %>
-<% end %>
 
-<button type="button" class="btn btn-info">
-<%= link_to 'Back', documents_path %>
-</button>
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Back', documents_path %>
+    </button>
 
-<br>
+    <br>
+</div>
