Update Devise authentication in controllers. Add validations for user input

--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -13,7 +13,7 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :activity %>
+      <%= form.label "Activity*" %>
       <%= form.text_field :title %>
     </div>
 
