--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -13,7 +13,7 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :comment %>
+      <%= form.label "Comment*" %>
       <%= form.text_area :comment %>
     </div>
 
