--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="field">
-      <%= form.label :photo %>
+      <%= form.label "Photo*" %>
       <%= form.file_field :photo, accept: 'image/png, image/jpg, image/jpeg, image/webp' %>
     </div>
 
