--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -2,4 +2,9 @@
     <h1>Add a new comment to the Chat</h1>
 
     <%= render 'form', chat: @chat %>
+
+    <button type="button" class="btn btn-outline-primary">
+        <%= link_to 'Back', chats_path %>
+    </button>
+
 </div>
