--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -13,7 +13,7 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :title %>
+      <%= form.label "Title*" %>
       <%= form.text_field :title %>
     </div>
 
@@ -28,7 +28,7 @@
     </div>
 
     <div class="field">
-      <%= form.label :file %>
+      <%= form.label "Document*" %>
       <%= form.file_field :file %>
     </div>
 
