--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="field">
-      <%= form.label :link %>
+      <%= form.label "Link*" %>
       <%= form.url_field :link %>
     </div>
 
