--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,63 +1,72 @@
 <div class="container">
     <h1>Itinerary</h1>
-
-    <table class="table">
-    <thead>
-        <tr>
-        <th>Date</th>
-        <th>Time</th>
-        <th>Activity</th>
-        <th>Description</th>
-        <th colspan="3">Options</th>
-        </tr>
-    </thead>
-
-    <tbody>
+    <div class="main">
     <% @activities.each do | activity | %>
-        <tr>
-        <td>
-        <% if activity.date? %>
-            <%= activity.date.strftime("%A %-d-%b-%Y") %>
-        <% else %>
-            &nbsp;
-        <% end %>
-        </td>
+        <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">
+                <% if activity.title? %>
+                    <%= sanitize(activity.title) %>
+                <% else %>
+                    &nbsp;
+                <% end %>
+            </h5>
 
-        <td>
-        <% if activity.time? %>
-            <%= activity.time.strftime("%l:%M %P") %>
-        <% else %>
-            &nbsp;
-        <% end %>
-        </td>
+            <p class="card-text">
+                <strong>Date: </strong>
+                <% if activity.date? %>
+                    <%= activity.date.strftime("%A %-d-%b-%Y") %>
+                <% else %>
+                    &nbsp;
+                <% end %>
+            </p>
 
-        <td>
-        <% if activity.title? %>
-            <%= sanitize(activity.title) %>
-        <% else %>
-            &nbsp;
-        <% end %>
-        </td>
+            <p class="card-text">
+                <strong>Time: </strong>
+                <% if activity.time? %>
+                    <%= activity.time.strftime("%l:%M %P") %>
+                <% else %>
+                    &nbsp;
+                <% end %>
+            </p>
 
-        <td>
-        <% if activity.description? %>
-            <%= sanitize(activity.description) %>
-        <% else %>
-            &nbsp;
-        <% end %>
-        </td>
+            <p class="card-text">
+            <strong>Description: </strong>
+                <% if activity.description? %>
+                    <%= sanitize(activity.description) %>
+                <% else %>
+                    &nbsp;
+                <% end %>
+            </p>
+            </div>
 
-        <td><%= link_to 'View Details', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Delete', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <div class="card-footer">
+                <span class="activity_buttons">
+                    <button type="button" class="btn btn-outline-primary"> 
+                        <%= link_to 'View Details', activity %>
+                    </button>
 
-        </tr>
+                    <% if user_signed_in? %>
+                        <% if activity.user_id == current_user.id %>
+                            <button type="button" class="btn btn-outline-primary"> 
+                                <%= link_to 'Edit', edit_activity_path(activity) %>
+                            </button>
+
+                            <button type="button" class="btn btn-outline-primary"> 
+                                <%= link_to 'Delete', activity, method: :delete, data: { confirm: 'Are you sure?' } %>
+                            </button>
+                        <% end %>
+                    <% end %>
+                </span>
+            </div>
+        </div>
     <% end %>
-    </tbody>
-    </table>
+</div>
+</div>
 
-    <br>
+<br>
 
+<div class="container">
     <button type="button" class="btn btn-outline-primary">  
         <%= link_to 'Add a New Activity', new_activity_path %>
     </button>
