Set card widths for index views

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,7 +2,7 @@
     <h1>Itinerary</h1>
     <div class="main">
     <% @activities.each do | activity | %>
-        <div class="card">
+        <div class="card" style="width: 100%;">
         <div class="card-body">
             <h5 class="card-title">
                 <% if activity.title? %>
