--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,7 +2,7 @@
     <h1>Contacts</h1>
     <div class="main">
     <% @contacts.each do | contact | %>
-    <div class="card">
+    <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">
                 <% if contact.firstname?%>
