--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -2,7 +2,7 @@
     <h1>Documents</h1>
     <div class="main">
     <% @documents.each do | document | %>
-        <div class="card">
+        <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">
                 <% if document.title? %>
