--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
  @import "bootstrap";
 
- h1 {
+h1 {
      margin-top: 1em;
  }
 
@@ -28,7 +28,7 @@
     margin-bottom: .4em;
 }
 
-.chat_buttons button, .contact_buttons button, .activity_buttons button {
+.chat_buttons button, .contact_buttons button, .activity_buttons button, .link_buttons button {
     margin-bottom: .4em;
 }
 
