--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -24,7 +24,8 @@
 
     <div class="field">
       <%= form.label :category %>
-      <%= form.text_field :category %>
+      <%= form.select :category,
+      %w( Charter Equipment Food General Insurance Transfers ) %>
     </div>
 
     <div class="field">
