Fixed error activities in itinerary were not sorted by date

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -41,10 +41,10 @@
             </div>
 
             <div class="card-footer">
-                <span class="activity_buttons">
-                    <button type="button" class="btn btn-outline-primary"> 
+                <%# <span class="activity_buttons"> %>
+                    <%# <button type="button" class="btn btn-outline-primary"> 
                         <%= link_to 'View Details', activity %>
-                    </button>
+                    <%# </button> %> 
 
                     <% if user_signed_in? %>
                         <% if activity.user_id == current_user.id %>
